# ChatBrancher

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  main.py  pyproject.toml
backend/legacy/: chat_tree_structure.py  user_repository_impl.py  user_repository_protocol.py
backend/migrations/models/: 0_20251013214336_init.py  0_20251019191957_init.py  0_20251027042809_init.py  1_20251016121946_add_users_and_owner_uuid.py
backend/scripts/: benchmark_precommit.sh
backend/src/: __init__.py
backend/src/application/use_cases/: chat_interaction.py  chat_selection.py  verify_chat_access.py
backend/src/domain/entities/: chat_tree_entity.py  message_entity.py  user_entity.py
backend/src/domain/services/: tree_reconstruction.py
backend/src/infrastructure/: config.py  models.py  openrouter_client.py
backend/src/infrastructure/db/: config.py  models.py
backend/src/infrastructure/security/: jwt.py  password.py
backend/src/interface_adapters/api/: auth.py  chats.py  messages.py
backend/src/interface_adapters/gateways/: chat_repository.py  llm_api_adapter.py  user_repository.py
backend/src/interface_adapters/presenters/: format_llm_input.py  format_llm_output.py
backend/src/scripts/: create_user.py
backend/src/tests/dev/: chat.py  chat_integ.py  llm_response.py  test_get_chat_tree_messages.py
backend/src/tests/integration/: test_chat_repository.py
backend/src/tests/unit/: test_chat_tree_entity.py  test_user_entity.py  test_verify_chat_access.py
(+47 files in other folders)
