[project]
name = "cb-back-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich>=0.9.2",
    "anytree>=2.13.0",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tortoise-orm>=0.25.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.4.4",
    "ty>=0.0.1a21",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["venv", "__pycache__", "build", "dist"]
fix = true

# [tool.ruff.lint]
# extend-ignore = ["E203", "W503"]  # flake8と同様の無視ルール

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["src/tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.aerich]
tortoise_orm = "infrastructure.db.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
